--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.8.1
 Django==5.2
 django-debug-toolbar==5.1.0
+graphviz==0.20.3
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+python-dotenv==1.1.0
 sqlparse==0.5.3
