--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-phonenumber-field==8.1.0
 django-unfold==0.57.0
 djangorestframework==3.16.0
 graphviz==0.20.3
+phonenumbers==9.0.6
 phonenumberslite==9.0.5
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
