--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-extensions==4.1
 django-phonenumber-field==8.1.0
 django-unfold==0.57.0
 djangorestframework==3.16.0
+drf-nested-routers==0.94.2
 graphviz==0.20.3
 phonenumbers==9.0.6
 phonenumberslite==9.0.5
